# pocket-crew

./: .gitignore  AGENTS.md  CLAUDE.md  GEMINI.md  PHASE_10_HANDOFF.md  build-kleidiai.sh  build.gradle.kts  build_output.txt  clean_file.py  codeql_docs_check.py  commit_message.txt  core_data_ksp_output.txt  dummy-commit.sh  final_detekt_4.txt  final_detekt_5.txt  fix.py  fix2.py  fix3.py  fix_bangs.py  fix_brace3.py  fix_brace4.py  fix_c5_c6.py  fix_codeql.sh  fix_dispatchers.py  fix_file.py  fix_final.py  fix_generate.py  fix_generate_final.py  fix_generate_final2.py  fix_generate_final3.py  fix_generate_proper.py  fix_imports.py  fix_imports2.py  fix_syntax.py  fix_test.py  fix_test2.py  fix_test3.py  fix_test_final.py  fix_test_final2.py  fix_tests.sh  (+19 more)
.Jules/: palette.md
.factory/droids/: architect.md  coder.md  discovery.md  scrupulous-reviewer.md  spec-writer.md  tdd-droid.md
.github/: codeql-config.yml
.github/prompts/: commit_composer.md  commit_message.md
.github/scripts/: gemini_review.py  review.py
.github/workflows/: codeql.yml  codeql.yml.orig  gemini-review.yml  jules-review.yml  minimax-review.yml  unit-tests.yml
.jules/: bolt.md  sentinel.md
agents/: DISCOVERY.md  IMPLEMENTATION.md  SPEC.md  TDD.md
app/: build.gradle.kts
config/detekt/: detekt.yml
contracts/: ARCHITECTURE_RULES.md  CODE_STYLE_RULES.md  DATA_LAYER_RULES.md  FACTORY_DROID_AGENTS.md  GEMINI_AGENTS.md  INFERENCE_RULES.md  UI_DESIGN_SPEC.md  UNIT_TESTING.md
core/common/: build.gradle.kts
core/data/: build.gradle.kts
core/database/: build.gradle.kts
core/domain/: build.gradle.kts
core/testing/: build.gradle.kts
core/ui/: build.gradle.kts
feature/artifact/: build.gradle.kts
feature/chat/: build.gradle.kts
feature/chat-inference-service/: build.gradle.kts
feature/download/: build.gradle.kts
feature/history/: build.gradle.kts
feature/inference/: build.gradle.kts
feature/moa-pipeline-worker/: build.gradle.kts
feature/settings/: build.gradle.kts
feature/studio/: build.gradle.kts
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
llama-android/: build.gradle.kts  proguard-rules.pro
llama-android/src/main/cpp/: CMakeLists.txt  FindOpenCL.cmake  cpudetect.cpp  llama-jni.cpp  opencl_loader.cpp  test_token_processor.cpp  token_processor.hpp
plans/: 2026-03-27-final-spec-asset-config-default-schema.md  2026-04-02-pr-review-followups.md  2026-04-04-byok_api_provider_wiring-v1.0.md  2026-04-04-byok_api_provider_wiring-v2.0.md  2026-04-04-byok_api_provider_wiring-v3.0.md  2026-04-04-openai-integration-plan-v1.0.md  2026-04-04-openai-integration-plan-v2.0.md  2026-04-06-crew-mode-system-prompts-v1.0.md  2026-04-06-crew-mode-system-prompts-v2.0.md  2026-04-08-settings-viewmodel-refactor-plan.md  2026-04-09-enable-vision-support-v1.md  2026-04-09-enable-vision-support-v2.md  2026-04-09-guid-based-config-ids-v1.md  2026-04-09-long-to-string-id-refactor.md  2026-04-13-refactor-stream-responses-1.0.md  2026-04-14-add-tavily-extract-toolcall-v1.md  2026-04-18-model-download-regression-fix-v1.md  2026-04-19-messagelist-scroll-and-flicker-fix-v1.md  2026-04-20-background-inference-implementation-verification-1.0.md  2026-04-20-chat-inference-service-fixes-1.0.md  2026-04-20-chat-inference-service-fixes-2.0.md  2026-04-20-litert-config-mismatch-fix-1.0.md  2026-04-20-message-list-flicker-fix-v2-2.md  2026-04-20-refactor-inference-service-sharedflow-1.0.md  2026-04-20-refactor-inference-service-sharedflow-v2.md  2026-04-21-Single-Owner Chat Turn Stream Refactor-v1.md  2026-04-22-2026-04-22-Last-Chunk-Cutoff-Fix-Atomic-Handoff-v3.md  2026-04-22-2026-04-22-Last-Chunk-Cutoff-Fix-v2-v2.md  2026-04-22-Last-Chunk Cutoff Fix-v1.md  2026-04-30-studio-gallery-feature-roadmap-v1.md  T4-A-music-generation-research.md  chat-image-inspection-tool.md  db_refactor.md  fix-tool-parsing.md  fts-joins.md  google-genai-sdk-migration.md  litert-tool-calling.md  local-model-plan.md  local-model-system-prompt-bottom-sheet.md  model-filtering-plan.md  (+10 more)
plans/13-add-search-skill-for-models/: discovery.md  spec.md  test_spec.md
plans/13A-shared-and-remote-search-skill/: discovery.md  spec.md  stub_implementation.py  test_spec.md
plans/13B-google-and-local-envelope-search-skill/: discovery.md  spec.md  test_spec.md
plans/13C-llama-search-tool-bridge/: .phase_state.json  discovery.md  spec.md  test_spec.md
plans/13D-real-tavily-and-settings/: .phase_state.json  discovery.md  spec.md  test_spec.md
plans/14-implement-chat-history-search/: discovery-v1.md  spec.md  test_spec.md
plans/26-shared-context-between-engines/: discovery.md  spec.md  test_spec.md
plans/34-add-byok-to-settings-ui/: FINAL_SPEC.md  discovery_and_spec.md  tdd_spec.md
plans/37-model-registry-transactional/: discovery.md  spec.md  test_spec.md
plans/39-refactor-model-persistence-for-byok/: .phase_state.json  architecture_review.md  discovery.md  discovery_and_spec.md  spec.md  stub_implementation.py  test_spec.md
plans/42-ux-changes-post-39/: discovery.md  spec.md  test_spec.md
plans/5-render-chats-from-repository-on-history-screen/: discovery-v2.md  spec-v1.md  test_spec-v1.md
plans/6-navigate-to-existing-chat-from-history-screen/: discovery.md  implementation_prompt.md  spec.md  test_spec.md
plans/9-add-viewmodel-error-handling/: adr.md  discovery.md  spec.md  tdd_green_prompt.md  tdd_red_prompt.md  test_spec.md
plans/97-re-use-engines-for-same-model-file/: .phase_state.json  discovery.md  remediation_final.md  spec.md  stub_implementation.py  test_spec.md
plans/98-remove-model-status/: .phase_state.json  audit_report.md  discovery.md  spec.md  stub_implementation.py  test_spec.md
plans/BYOK-REFLOW-20260407/: .phase_state.json  discovery.md  spec.md  stub_implementation.py  test_spec.md
plans/FEAT-model-tooltips/: discovery.md  spec.md  test_spec.md
plans/FIX-inference-cancellation-stuckness/: spec.md  test_spec.md
plans/PERF-INF-AUDIT/: discovery.md  spec.md  test_spec.md
whisper-android/: build.gradle.kts
whisper-android/src/main/cpp/: CMakeLists.txt  whisper-jni.cpp
(+1287 files in other folders)
